--- a/Test/PackA/pages/content/Scene3/Scene3_4/Scene3_4.wxss
+++ b/Test/PackA/pages/content/Scene3/Scene3_4/Scene3_4.wxss
@@ -1,1 +1,54 @@
 /* PackA/pages/content/Scene3/Scene3_4/Scene3_4.wxss */
+
+.habit {
+  margin: 0rpx auto;
+  width: 100%;
+  height: 40px;
+  border-radius: 10rpx;
+  background-color: #fff;
+  display: flex;
+  padding: 15rpx;
+  box-sizing: border-box;
+  position: relative;
+  border-bottom: 1px solid #f1f1f1;
+}
+.habit .index {
+  margin: 25rpx 20rpx 0px 30rpx;
+  font-weight: bold;
+  color: #c93a3a;
+}
+.habit .icon {
+  margin-right: 25rpx;
+}
+.habit .icon .iconImg {
+  margin-top: 10rpx;
+  width: 70rpx;
+  height: 70rpx;
+}
+.habit .info {
+  display: flex;
+  flex-direction: column;
+  width: 60vw;
+}
+.habit .info .title {
+  margin: 25rpx 0rpx;
+  font-size: 30rpx;
+}
+.habit .img {
+  position: absolute;
+  right: 30rpx;
+  margin-top: 5rpx;
+  width: 60rpx;
+  height: 60rpx;
+}
+.habitlist {
+  position: relative;
+}
+.kelong {
+  z-index: 999;
+  position: absolute;
+  box-shadow: 1px 1px 5px #ccc;
+}
+.gray {
+  background-color: #efecec;
+}
