--- a/Test/PackA/pages/content/Scene3/Scene3_1/Scene3_1.wxml
+++ b/Test/PackA/pages/content/Scene3/Scene3_1/Scene3_1.wxml
@@ -27,7 +27,7 @@
         <view class="title">{{kelong.name}}</view>
       </view>
       <image class="img"
-        src="/source/drag.jpeg"></image>
+        src="https://636c-cloud1-4gl4jj9w3cb8d273-1311875883.tcb.qcloud.la/drag.jpeg?sign=cfdeb4ac21bfaeeeece9c9cd3970d08c&t=1652420771"></image>
     </view>
     <block wx:for="{{habitList}}" wx:key="name">
       <view class="habit {{selectedIndex==index?'gray':''}}" >
@@ -42,7 +42,7 @@
         <view data-index='{{index}}' catchtouchstart='dragStart' catchtouchmove='dragMove'
           catchtouchend='dragEnd'>
           <image class="img"
-            src="/source/drag.jpeg"></image>
+            src="https://636c-cloud1-4gl4jj9w3cb8d273-1311875883.tcb.qcloud.la/drag.jpeg?sign=cfdeb4ac21bfaeeeece9c9cd3970d08c&t=1652420771"></image>
         </view>
       </view>
     </block>
@@ -50,4 +50,4 @@
 </view>
   </van-popup>
 </block>
-<navigator id="backButton" open-type="navigate" url="/PackA/pages/content/Scene1/index/index" hidden="{{showBackButton}}">再去做后勤组的任务清单上其他的任务吧！</navigator>
+<navigator id="backButton" open-type="navigate" url="/PackA/pages/content/Scene3/index/index" hidden="{{showBackButton}}">再去做节目组的任务清单上其他的任务吧！</navigator>
