--- a/Test/PackA/pages/content/Scene2/Scene2_1/Scene2_1.wxss
+++ b/Test/PackA/pages/content/Scene2/Scene2_1/Scene2_1.wxss
@@ -1,9 +1,9 @@
-/* PackA/pages/content/Scene3/Scene3_4/Scene3_4.wxss */
+/* PackA/pages/content/Scene2/Scene2_1/Scene2_1.wxss */
 
 .habit {
   margin: 0rpx auto;
   width: 100%;
-  height: 40px;
+  height: 68px;
   border-radius: 10rpx;
   background-color: #fff;
   display: flex;
@@ -13,16 +13,16 @@
   border-bottom: 1px solid #f1f1f1;
 }
 .habit .index {
-  margin: 25rpx 20rpx 0px 30rpx;
+  margin: 25rpx 0rpx 0rpx 0rpx;
   font-weight: bold;
   color: #c93a3a;
 }
 .habit .icon {
-  margin-right: 25rpx;
+  margin-right: 0rpx;
 }
 .habit .icon .iconImg {
   margin-top: 10rpx;
-  width: 70rpx;
+  width: 25rpx;
   height: 70rpx;
 }
 .habit .info {
@@ -31,13 +31,14 @@
   width: 60vw;
 }
 .habit .info .title {
-  margin: 25rpx 0rpx;
+  margin: 0rpx 0rpx;
+  margin-right: 70rpx;
   font-size: 30rpx;
 }
 .habit .img {
   position: absolute;
   right: 30rpx;
-  margin-top: 5rpx;
+  margin-top: 30rpx;
   width: 60rpx;
   height: 60rpx;
 }
@@ -51,4 +52,18 @@
 }
 .gray {
   background-color: #efecec;
+}
+
+#container-left{
+  float: left;
+  width: 40%;
+}
+
+#container-right{
+  float: right;
+  width: 60%;
+}
+
+.left-cell{
+  height: 150rpx;
 }
